--- a/libshpool/Cargo.toml
+++ b/libshpool/Cargo.toml
@@ -36,12 +36,11 @@ tracing = "0.1" # logging and performance monitoring facade
 bincode = "1" # serialization for the control protocol
 shpool_vt100 = "0.1.2" # terminal emulation for the scrollback buffer
 shell-words = "1" # parsing the -c/--cmd argument
-motd = { version = "0.2.1", default-features = false, features = [] } # getting the message-of-the-day
 termini = "1.0.0" # terminfo database
 tempfile = "3" # RAII tmp files
 strip-ansi-escapes = "0.2.0" # cleaning up strings for pager display
 notify = "6" # watch config file for updates
-libproc = "0.14.8" # sniffing shells by examining the subprocess
+#libproc = "0.14.8" # sniffing shells by examining the subprocess
 
 # rusty wrapper for unix apis
 [dependencies.nix]
